# pk-timetable

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  config.yaml  pyproject.toml
.claude/skills/anonymization-check/: SKILL.md
deploy/: crontab.txt  pk-timetable-sync.sh  pk-timetable.openrc
src/pk_timetable/: config.py  fetcher.py  gcal.py  main.py  notify.py  parser.py  scraper.py  sync.py
tests/: test_fetcher.py  test_notify.py  test_parser.py  test_scraper.py  test_sync.py
tests/integration/: conftest.py  test_events.py  test_parser.py
tests/resources/: generate_test_calendar.py  test_calendar.xlsx
